--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,24 @@
 Package: poodleR
-Title: What the Package Does (One Line, Title Case)
+Title: POOled donor Deconvolution by LEast square Regression
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Marta", "Perez-Alcantara", email = "martapalcantara@gmail.com", 
+    role = c("aut", "cre"))
+Maintainer: Marta Perez-Alcantara <martapalcantara@gmail.com>
+Description: Uses WGS from a pool of donors and their genotypes to calculate their proportions.
+License: `use_gpl3_license()`
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+Imports:
+    Matrix,
+    corpcor,
+    data.table,
+    R.utils,
+    dplyr,
+    quadprog,
+    stringr,
+    vcfR
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
